name:                cryptocurrency
version:             0.1.0.0
homepage:            https://github.com/cloudhead/cryptocurrency
license:             BSD3
license-file:        LICENSE
author:              Alexis Sellier
maintainer:          alexis@cloudhead.io
copyright:           2017 Alexis Sellier
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bitcoin
                     , Bitcoin.Crypto
                     , Bitcoin.Network
                     , Bitcoin.Types
                     , Bitcoin.Tx
                     , Crypto.Blockchain
                     , Crypto.Blockchain.Block
                     , Crypto.Blockchain.Log
                     , Crypto.Blockchain.Hash
                     , Crypto.Blockchain.Types
                     , Crypto.Blockchain.Message
                     , Crypto.Blockchain.Mempool
  build-depends:       base                  >= 4.7 && < 5
                     , cryptonite            == 0.24
                     , fast-logger           == 2.4.10
                     , memory                == 0.14.8
                     , pipes                 == 4.3.5
                     , pipes-network         == 0.6.4.1
                     , mtl                   == 2.2.1
                     , monad-logger          == 0.3.25.1
                     , merkle-tree           == 0.1.0
                     , network               == 2.6.3.2
                     , network-simple        == 0.4.0.5
                     , binary                == 0.8.5.1
                     , bytestring            == 0.10.8.2
                     , base16-bytestring     == 0.1.1.6
                     , base58-bytestring     == 0.1.0
                     , stm                   == 2.4.4.1
                     , time                  == 1.8.0.2
                     , async                 == 2.1.1.1
                     , containers            == 0.5.10.2
  default-language:    Haskell2010
  default-extensions:  MultiParamTypeClasses
                     , FunctionalDependencies
                     , FlexibleContexts
                     , NamedFieldPuns
                     , ConstraintKinds
                     , StandaloneDeriving
                     , ViewPatterns
                     , TypeSynonymInstances
                     , RankNTypes
                     , StandaloneDeriving
                     , ScopedTypeVariables
                     , GeneralizedNewtypeDeriving
                     , TypeApplications
                     , DeriveGeneric
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , GADTs
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -fno-warn-name-shadowing
                       -fno-warn-unused-do-bind
                       -fno-warn-unused-top-binds
                       -fno-warn-unused-matches
                       -fno-warn-unused-local-binds

executable bitcoin-exe
  main-is:             src/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cryptocurrency
  default-language:    Haskell2010

test-suite bitcoin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Bitcoin.Tests
  build-depends:       base
                     , cryptocurrency
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cloudhead/cryptocurrency
